Adicionado css externo e subtitulo

--- a/3.Bloco-Introdução-HTML-CSS/4.HTML-Semantico/style.css
+++ b/3.Bloco-Introdução-HTML-CSS/4.HTML-Semantico/style.css
@@ -12,6 +12,7 @@ h1 {
     height: 50px;
     text-align: center;
     width: 200px;
+    margin: auto;
 }
 
 .second {
@@ -20,6 +21,7 @@ h1 {
     height: 50px;
     text-align: center;
     width: 300px;
+    display: inline-block;
 }
 
 .third {
@@ -28,4 +30,5 @@ h1 {
     height: 50px;
     text-align: center;
     width: 300px;
+    display: inline-block;
 }
