--- a/3.Bloco-Introdução-HTML-CSS/4.HTML-Semantico/style2.css
+++ b/3.Bloco-Introdução-HTML-CSS/4.HTML-Semantico/style2.css
@@ -2,3 +2,12 @@ h1 {
     font-style: italic;
     color: blue;
 }
+
+p {
+    display: inline-block;
+    font-size: 18px;
+}
+
+table, td {
+    border: 1px solid black;
+}
