--- a/6.HTML-e-CSS-Forms/5.CSS-Responsivo/style.css
+++ b/6.HTML-e-CSS-Forms/5.CSS-Responsivo/style.css
@@ -65,3 +65,28 @@ body {
   .card:nth-of-type(3) {
     background-color: #41197f;
   }
+
+  @media screen and (max-width: 500px) {
+  .card:nth-of-type(1) {
+        display: block;
+    }
+  }
+
+  @media screen and (max-width: 1000px) and (min-width: 600px) {
+    .card:nth-of-type(2) {
+        display: block;
+    }
+  }
+
+  @media screen and (max-width: 650px) {
+    .card:nth-of-type(3) {
+        display: block;
+    }
+  }
+
+  @media (max-width: 500px) {
+    p.trick {
+        color: black;
+    }
+  }
+  
